still on project

--- a/marriage-countdown/index.html
+++ b/marriage-countdown/index.html
@@ -25,10 +25,10 @@
         </div>
         <div class="secondBody">
             <div class="imgs">
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                <div><img src="Images/image 5.jpg" alt=""></div>
+                <div><img src="Images/image 6.jpg" alt=""></div>
+                <div><img src="Images/image 1.jpg" alt=""></div>
+                <div><img src="Images/image 2.jpg" alt=""></div>
             </div>
             <div class="wish">
                 <p>A successful marriage is not found in the perfect moments, but in the way we grow together through life's challenges, with love, patience, and understanding!</p>
