--- a/marriage-countdown/index.html
+++ b/marriage-countdown/index.html
@@ -33,6 +33,23 @@
             <div class="wish">
                 <p>A successful marriage is not found in the perfect moments, but in the way we grow together through life's challenges, with love, patience, and understanding!</p>
             </div>
+            <div class="venue">
+                <div>
+                    <p>Ashirofa Field, Iya, Area, saki oyo State Nigeria</p>
+                    <p>On 1st of Feb, 2025.</p>
+                    <p>10:00 am prompt</p>
+                    <p>Reception follow Immediately at the same Venue</p>
+                </div>
+                <div>
+                    <p>RSVP</p>
+                </div>
+                <div>
+                    <p>09029789731 <span>08059187209</span></p>
+                </div>
+                <div>
+                    <p><span>09155595945</span> 08077186499</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="counter">
